[package]
name = "termland-codec"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ffmpeg-next = { version = "8", default-features = false, features = ["codec", "format", "software-scaling"] }
libc = "0.2"
opus = { workspace = true }

[[bin]]
name = "av1_test"
path = "src/bin/av1_test.rs"
