[package]
name = "termland-compositor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
termland-protocol = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
nix = { version = "0.29", features = ["fs", "process", "signal", "user"] }
libc = "0.2"
wayland-protocols-misc = { version = "0.3.12", features = ["client"] }
