[package]
name = "termland-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
ciborium = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
