[package]
name = "termland-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
termland-protocol = { workspace = true }
termland-codec = { workspace = true }
termland-compositor = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures = "0.3"
libpulse-binding = { workspace = true }
libpulse-simple-binding = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rcgen = { workspace = true }
rustls-pemfile = { workspace = true }
libc = { workspace = true }
